<resources>
    <string name="app_name">Get Me…</string>

    <!--Facebook code-->
    <string name="facebook_app_id" translatable="false">151569875678530</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb151569875678530</string>


    <!--Facebook login activity's strings-->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_subtitle">To login the app, you need to use your Facebook account.
                \nWe use it to quickly connect you with your friends</string>


    <!--Bottom Navigation items & menu items-->
    <string name="home_title">Home</string>
    <string name="my_wishlists_title">My Wishlists</string>
    <string name="friends_title">Friends</string>
    <string name="logout">Logout</string>
    <string name="add_wishlist">Add Wishlist</string>
    <string name="upload_image">Upload Image</string>


    <!--User item's strings-->
    <string name="user_name_place_holder">User name</string>
    <string name="mute_button">Mute</string>
    <string name="unmute_button">Unmute</string>


    <!--Gift item's strings-->
    <string name="gift_name_placeholder">Gift Name</string>
    <string name="gift_description_placeholder">A gift description, it\'s a gift that I want that
        has some properties. These are some of them (Like size color or place to buy)</string>
    <string name="gift_brand_placeholder">Brand</string>
    <string name="gift_web_link_placeholder">https://play.anghami.com/playlist/31334698</string>
    <string name="buy_button">Buy this gift</string>
    <string name="share_in_gift_button">Share in paying for this gift</string>
    <string name="gift_is_bought">Gift is already bought</string>
    <string name="cancel_buying_button">Cancel buying</string>
    <string name="cancel_sharing_button">Cancel sharing</string>


    <!--WishList item's strings-->
    <string name="remaining_gifts" formatted="false">%1$s/%2$s Gifts taken</string>
    <plurals name="gifts_count">
        <item quantity="one">%1$s Gift added</item>
        <item quantity="other">%1$s Gifts added</item>
    </plurals>
    <string name="wishlist_statement" formatted="false">%1$s event on %2$s</string>
    <string name="empty_friends_wishlists">Your friends haven\'t posted any wishlists yet.</string>
    <string name="empty_my_wishlists">You haven\'t posted any wishlists yet.</string>


    <!--Event image item's strings-->
    <string name="event_image_label">Mario Amgad\'s Birthday event</string>


    <!--Friends fragment's strings-->
    <string name="muted_friend_successfully">Muted friend successfully</string>
    <string name="unmuted_friend_successfully">Unmuted friend successfully</string>
    <string name="failed_to_mute_friend">Failed to mute friend. Try again later</string>
    <string name="failed_to_unmute_friend">Failed to unmute friend. Try again later</string>


    <!--WishList editor's strings-->
    <string name="save_wishlist">Save</string>
    <string name="wishlist_editor_title">Wishlist Editor</string>
    <string name="event_card_title">Event Description</string>
    <string name="event_description">Please tell us what type of event you\'ll be having,
        and when is it going to be held.</string>
    <string name="event_type_label">Event type:</string>
    <array name="event_types">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Engagement</item>
        <item>Baby Shower</item>
        <item>Christmas</item>
        <item>Secret Santa</item>
    </array>
    <string name="event_date_label">Event date:</string>
    <string name="choose_date_button">Choose Date</string>
    <string name="date_placeholder">No date is picked yet</string>
    <string name="gifts_card_title">Gifts List</string>
    <string name="add_gift_button">Add Gift</string>
    <string name="empty_gifts">No gifts added</string>
    <string name="empty_event_fields_toast">Make sure you\'ve chosen the date and type of event</string>
    <string name="empty_gifts_toast">You haven\'t add any gifts to this list</string>
    <string name="wishlist_saved_successfully">WishList saved successfully</string>
    <string name="failed_to_save_wishlist">Failed to save wish list, try again.</string>


    <!--Wishlist detail's strings-->
    <string name="wishlist_detail_title">Wishlist</string>
    <string name="event_type_placeholder">Birthday</string>
    <string name="shared_in_gift_successfully">Shared in gift successfully</string>
    <string name="failed_to_share_in_gift">Failed to share in gift, try again later</string>
    <string name="canceled_buying_gift_successfully">Canceled buying gift successfully</string>
    <string name="canceled_sharing_gift_successfully">Canceled sharing in gift successfully</string>
    <string name="error_canceling">Failed to cancel, try again later</string>


    <!--Gift editor dialog's strings-->
    <string name="gift_editor_title">What do you want?</string>
    <string name="gift_name_hint">Gift Name</string>
    <string name="gift_brand_hint">Brand</string>
    <string name="gift_description_hint">Description</string>
    <string name="gift_web_link_hint">Web link</string>
    <string name="empty_gift_name_toast">Cannot save gift with out name</string>
    <string name="gift_saved_successfully">Gift saved successfully</string>


    <!--Buy gift dialog's strings-->
    <string name="buy_gift_title">Buy this gift</string>
    <string name="sharing_checkbox_label">Share others in this gift</string>
    <string name="confirm_button">Confirm</string>
    <string name="number_of_sharers_text">Sharing with %1$s friends</string>
    <string name="bought_gift_successfully">Bought gift successfully</string>
    <string name="error_buying_gift">There was an error buying gift, try again later</string>


    <!--Share gift dialog's strings-->
    <string name="sharing_confirmation_title">Are you sure?</string>
    <string name="sharing_confirmation_message">Do you want to share in this gift?</string>
    <string name="share_positive_button">Share</string>


    <!--Upload image dialog's strings-->
    <string name="image_caption">Write a small caption here…</string>
    <string name="upload_image_title">Upload Image</string>
    <string name="upload_image_button">Upload Image</string>
    <string name="empty_image_message">You need to upload an image first</string>
    <string name="error_uploading_image">There was an error uploading image, please try again</string>

</resources>
